# jira

./: .gitignore  LICENSE  README.md  go.mod  go.sum  justfile  main.go  pyproject.toml
jql/: assignee.jql  my-done-issues.jql  my-issues.jql
pkg/util/: util.go
util/: util.go
