[tool.poetry]
name = "jira"
version = "0.1.0"
description = ""
authors = ["Keith Devens"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.27.1"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
ipython = "^8.3.0"
ptpython = "^3.0.20"
pylint = "^2.13.8"
mypy = "^0.950"
black = "^22.3.0"
pudb = "^2022.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
